ran mongo, included bodyparser and view engine.

--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@coreui/coreui": "^2.1.16",
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
+    "ejs": "^2.7.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "mongodb": "^3.3.3",
     "mongoose": "^5.7.7",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
