--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "the database and admin dashboard for Cultivating Coders",
   "main": "./backend/app.js",
   "dependencies": {
-    "@coreui/coreui": "^2.1.16",
+    "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
+    "dotenv": "^8.2.0",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
