--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "the database and admin dashboard for Cultivating Coders",
   "main": "./backend/app.js",
   "dependencies": {
+    "@coreui/coreui": "^2.1.16",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
